--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     $('#content').css("padding-top", logo_background.height);
                 };
 
-                load_workmark(null);
+                load_workmark(position_workmark);
 
                 window.onresize = function() {
                     svg_parent.style.visibility = "hidden";
