--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 
                 var position_workmark = function() {
                     var $this = $('#logo_background');
+                    console.log($this);
                     logo_background.offset = $this.offset();
                     logo_background.width = $this.width();
                     logo_background.height = $this.height();
