--- a/index.html
+++ b/index.html
@@ -82,6 +82,10 @@
                     $(window).trigger('resize');
                 }, 10);
 
+                setTimeout(function() {
+                    $(window).trigger('resize');
+                }, 100);
+
             });
         </script>
     </body>
