--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     position_content();
                 }
 
-                load_wordmark(position_wordmark);
+                load_wordmark(null);
 
                 setTimeout(function() {
                     $(window).trigger('resize');
