--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <script type="text/javascript" src="//d3js.org/d3.v3.min.js"></script>
         <script type="text/javascript">
             window.addEventListener("load", function() {
-                
+                const WORDMARK_FRACTION = 2.5; // higher is smaller
                 var logo_background = { offset : null, width : 0, height : 0, centerX : 0, centerY : 0 };
                 var svg_parent = null;
                 svg_parent = document.getElementsByClassName('svg_container')[0];
@@ -44,30 +44,27 @@
                         update_logo_background_state();
                         xml.documentElement.setAttribute("preserveAspectRatio", "xMidYMid meet");
                         xml.documentElement.setAttribute("class", "svg_content");
-                        xml.documentElement.style.width = logo_background.width / 3 + "px";
-                        xml.documentElement.style.top = (logo_background.centerY - (155 / 2)) + "px";
-                        xml.documentElement.style.left = (logo_background.centerX - (335 / 2)) + "px";
+                        xml.documentElement.style.width = logo_background.width / WORDMARK_FRACTION + "px";
+                        xml.documentElement.style.top = (logo_background.centerY - (159.6 / 2)) + "px";
+                        xml.documentElement.style.left = (logo_background.centerX - (343 / 2)) + "px";
                         svg_parent.appendChild(xml.documentElement);
                         if (callback) callback;
                     });
                 };
 
                 var update_logo_background_state = function() {
-                    //console.log("update_logo_background_state");
                     var $this = $('#logo_background');
                     logo_background.offset = $this.offset();
                     logo_background.width = $this.width();
                     logo_background.height = $this.height();
                     logo_background.centerX = logo_background.offset.left + logo_background.width / 2;
                     logo_background.centerY = logo_background.offset.top + logo_background.height / 2;
-                    //console.log(logo_background);
                 }
 
                 var position_wordmark = function() {
-                    //console.log("position_wordmark");
                     update_logo_background_state();
                     d3.select("#wordmark")
-                        .style("width", logo_background.width / 3 + "px")
+                        .style("width", logo_background.width / WORDMARK_FRACTION + "px")
                         .style("top", logo_background.centerY - parseInt($('#wordmark').height()) / 2 + "px")
                         .style("left", logo_background.centerX - parseInt($('#wordmark').width()) / 2 + "px");
                 };
@@ -81,9 +78,8 @@
                     position_content();
                 }
 
-                load_wordmark(null);
-
                 setTimeout(function() {
+                    load_wordmark(null);
                     $(window).trigger('resize');
                 }, 100);
 
