--- a/index.html
+++ b/index.html
@@ -88,6 +88,18 @@
                 }, 10);
             }
 
+            var logo_background_img = document.getElementById('logo_background');
+
+            var logo_background_img_loaded = function() {
+                trigger_resize()
+            }
+
+            if (logo_background_img.complete) {
+                logo_background_img_loaded()
+            } else {
+                logo_background_img.addEventListener('load', loaded);
+            }
+
             window.addEventListener("load", function() {
                 svg_parent = document.getElementsByClassName('svg_container')[0];
                 load_wordmark(trigger_resize());
