--- a/index.html
+++ b/index.html
@@ -35,13 +35,15 @@
 
             const WORDMARK_FRACTION = 2.5; // a higher value makes a smaller wordmark
             const NODE_LAYERS = 14;
-            const NODE_LAYER_ROWS = 13;
+            const NODE_LAYER_ROWS = 10;
             const NODE_LAYER_ID_PREFIX = "node_layer_";
             const SVG_ASSET_ROOT = "assets/components/";
 
             var logo_background_img = document.getElementById('logo_background');
             var logo_background = { offset : null, width : 0, height : 0, centerX : 0, centerY : 0 };
             var node_layers_xml = null;
+            var node_layer_margin = {top: 1, right: 1, bottom: 1, left: 1};
+
             var svg_parent = document.getElementById('svg_container');
             var wordmark_parent = document.getElementById('wordmark_container');
             var node_layers_parent = document.getElementById('node_layers_container');
@@ -111,17 +113,14 @@
 
             var init_node_layers = function() {
                 update_logo_background_state();
-                var node_layer_margin = {top: 1, right: 1, bottom: 1, left: 1};
                 var node_layer_max_height = (logo_background.height - (NODE_LAYER_ROWS * (node_layer_margin.top + node_layer_margin.bottom))) / NODE_LAYER_ROWS;
                 var node_layer_max_width = node_layer_max_height;
                 var node_layer_rows = NODE_LAYER_ROWS + 1;
                 var node_layer_cols = Math.ceil(logo_background.width / node_layer_max_width) + 1;
-                var node_layer_scale_factor = 1 / (180 / node_layer_max_height);
-                
+                var node_layer_scale_factor = 1 / (216 / node_layer_max_height);
                 for (var row_idx = 0; row_idx < node_layer_rows; row_idx++) {
                     for (var col_idx = 0; col_idx < node_layer_cols; col_idx++) {
-                        
-                        var layer_id = row_idx + "_" + col_idx + "_" + random_node_layer_id();
+                        var layer_id = row_idx + "_" + col_idx;
                         var layer_classes = "node_layer_container nlrow_" + row_idx + " nlcol_" + col_idx;
                         d3.select("#node_layers_container")
                             .append("svg")
@@ -132,14 +131,34 @@
                             .append("g")
                             .attr("transform", "translate(" + node_layer_margin.left + "," + node_layer_margin.top + ")")
                             .append("use")
-                            .attr("class", "random_node_layer")
+                            .attr("class", "random_node_layer" + (col_idx % 2 ? " random_node_layer_even" : " random_node_layer_odd"))
                             .attr("xlink:href", "#" + random_node_layer_id())
                             .attr("transform", "scale(" + node_layer_scale_factor + ")");
+                        var col_shift = (col_idx % 2) ? 0 : node_layer_max_height / 2;
+                        var row_shift = 0;
+                        $('#' + layer_id).css("top", row_idx * (node_layer_max_height + node_layer_margin.top + node_layer_margin.bottom) - col_shift);
+                        $('#' + layer_id).css("left", col_idx * (node_layer_max_width + node_layer_margin.left + node_layer_margin.right) - row_shift);
+                    }
+                }
+            };
+
+            var position_node_layers = function() {
+                update_logo_background_state();
+                var node_layer_max_height = (logo_background.height - (NODE_LAYER_ROWS * (node_layer_margin.top + node_layer_margin.bottom))) / NODE_LAYER_ROWS;
+                var node_layer_max_width = node_layer_max_height;
+                var node_layer_rows = NODE_LAYER_ROWS + 1;
+                var node_layer_cols = Math.ceil(logo_background.width / node_layer_max_width) + 1;
+                var node_layer_scale_factor = 1 / (216 / node_layer_max_height);
+                for (var row_idx = 0; row_idx < node_layer_rows; row_idx++) {
+                    for (var col_idx = 0; col_idx < node_layer_cols; col_idx++) {
+                        var layer_id = row_idx + "_" + col_idx;
                         var col_shift = (col_idx % 2) ? 0 : node_layer_max_height / 2;
                         $('#' + layer_id).css("top", row_idx * (node_layer_max_height + node_layer_margin.top + node_layer_margin.bottom) - col_shift);
                         $('#' + layer_id).css("left", col_idx * (node_layer_max_width + node_layer_margin.left + node_layer_margin.right) - node_layer_max_width / 2);
                     }
                 }
+                d3.selectAll('.random_node_layer')
+                    .attr("transform", "scale(" + node_layer_scale_factor + ")");
             };
 
             var num_as_px = function(i) {
@@ -163,6 +182,7 @@
             window.addEventListener("resize", function() {
                 position_wordmark();
                 position_content();
+                position_node_layers();
             });
 
         </script>
